--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,9 +36,7 @@ body {
   background: var(--color-background);
   font-family: var(--font-roboto), system-ui, -apple-system, sans-serif;
 
-  max-width: 90rem;
-  margin: 0 auto;
-  padding: 0 5rem;
+  padding: 0;
 }
 
 ul,
