Get better performance and accessibility.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ html {
 
   --color-primary: #ea580c;
   --color-secondary: #0f172a;
-  --color-secondary-light: #2563eb;
+  --color-secondary-light: #1a56db;
 
   --color-yellow-app: #facc15;
 
